--- a/app/src/main/res/layout/layout_same_day_interview_item.xml
+++ b/app/src/main/res/layout/layout_same_day_interview_item.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="4dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_cur_interview_dot"/>
+
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:lineSpacingExtra="2dp"
+        style="@style/style_text_normal_13"
+        android:textColor="@color/C_B2"
+        tools:text="工作日00:00-16:00投递的简历，平台要求招聘方须在当天回复"/>
+
+</LinearLayout>
