--- a/app/src/main/res/drawable/assistant_question_unselect_bg.xml
+++ b/app/src/main/res/drawable/assistant_question_unselect_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="@dimen/i_1dp"
+        android:width="1dp"
         android:color="#F5F7FF" />
-    <corners android:radius="@dimen/i_10dp" />
+    <corners android:radius="10dp" />
 
     <gradient
         android:angle="180"
