--- a/app/src/main/res/drawable/bg_ai_recommend_greet.xml
+++ b/app/src/main/res/drawable/bg_ai_recommend_greet.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+             android:shape="rectangle">
+
+    <gradient
+        android:angle="0"
+        android:startColor="#36B8FF"
+        android:endColor="#8258FF"/>
+
+    <corners android:radius="22dp"/>
+
+</shape>
