--- a/app/src/main/res/drawable/bg_ai_recommend_job_desc.xml
+++ b/app/src/main/res/drawable/bg_ai_recommend_job_desc.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+             android:shape="rectangle">
+
+    <gradient
+        android:angle="0"
+        android:startColor="#E6E9FF"
+        android:endColor="#DAEDFF"/>
+
+    <corners android:radius="4dp"/>
+
+</shape>
