--- a/app/src/main/res/layout/ai_recommend_analysis_tag.xml
+++ b/app/src/main/res/layout/ai_recommend_analysis_tag.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:singleLine="true"
+    android:gravity="center_vertical"
+    tools:text="学历优势·超过93%的人"
+    android:textColor="@color/C_B1"
+    android:textSize="13sp" />
