--- a/app/src/main/res/layout/ai_recommend_job_desc_tag.xml
+++ b/app/src/main/res/layout/ai_recommend_job_desc_tag.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingVertical="4dp"
+    android:paddingHorizontal="8dp"
+    android:singleLine="true"
+    android:gravity="center_vertical"
+    tools:text="医药制造"
+    android:background="@drawable/bg_ai_recommend_job_desc"
+    android:textColor="@color/C_B1"
+    android:textSize="12sp" />
