--- a/app/src/main/res/layout/ai_recommend_skill_tag.xml
+++ b/app/src/main/res/layout/ai_recommend_skill_tag.xml
@@ -2,9 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="24dp"
+    android:layout_height="wrap_content"
+    android:paddingVertical="4dp"
     android:paddingHorizontal="8dp"
-    android:layout_marginEnd="4dp"
     android:singleLine="true"
     android:gravity="center_vertical"
     tools:text="医药制造"
