--- a/app/src/main/res/layout/job_detail_item_intro.xml
+++ b/app/src/main/res/layout/job_detail_item_intro.xml
@@ -6,98 +6,136 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginHorizontal="10dp"
-    android:paddingHorizontal="12dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="12dp"
     android:background="@drawable/bg_job_detail_intro"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingDefaultResource"
     app:layout_radius="16dp">
 
-    <TextView
-        android:id="@+id/tv_job_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        style="@style/style_text_bold_24"
-        android:textColor="@color/C_B1"
-        tools:text="研究院院长"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_salary"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_salary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        style="@style/style_text_bold_16"
-        android:textColor="@color/C_P1"
-        tools:text="5-10万·16薪"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_job_name"/>
-
-    <com.zhaopin.common.widget.flowLayout.origin.TagFlowLayoutOrigin
-        android:id="@+id/layout_flow"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_job_name" />
-
     <LinearLayout
+        android:id="@+id/ll_cur_interview"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="8dp"
-        android:background="@drawable/ic_job_detail_small_map"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/layout_flow"
+        android:layout_height="60dp"
+        android:background="@drawable/cur_interview_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="14dp"
+            android:src="@drawable/ic_cur_interview"/>
+
+        <com.example.kotlindemo.task.jobdetail.JobDetailFlipper
+            android:id="@+id/layout_flipper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="8dp"/>
+
+    </LinearLayout>
+
+    <com.zhaopin.common.widget.RCConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/C_W1"
+        android:layout_marginTop="40dp"
+        android:paddingHorizontal="12dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_radius="16dp">
+
         <TextView
-            android:id="@+id/tv_street"
+            android:id="@+id/tv_job_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginEnd="24dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            style="@style/style_text_bold_14"
+            style="@style/style_text_bold_24"
             android:textColor="@color/C_B1"
-            tools:text="朝阳 望京街道"/>
+            tools:text="研究院院长"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_salary"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-        <LinearLayout
-            android:id="@+id/ll_route"
+        <TextView
+            android:id="@+id/tv_salary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical">
+            android:layout_marginTop="5dp"
+            style="@style/style_text_bold_16"
+            android:textColor="@color/C_P1"
+            tools:text="5-10万·16薪"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_job_name"/>
 
-            <ImageView
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_bus"/>
+        <com.zhaopin.common.widget.flowLayout.origin.TagFlowLayoutOrigin
+            android:id="@+id/layout_flow"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_job_name" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="8dp"
+            android:background="@drawable/ic_job_detail_small_map"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toBottomOf="@id/layout_flow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
-                android:id="@+id/tv_route_time"
+                android:id="@+id/tv_street"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginEnd="24dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                style="@style/style_text_bold_14"
+                android:textColor="@color/C_B1"
+                tools:text="朝阳 望京街道"/>
+
+            <LinearLayout
+                android:id="@+id/ll_route"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textSize="14sp"
-                android:textColor="@color/C_B2"
-                android:layout_marginStart="2dp"
-                tools:text="1小时10分"/>
-            
-            <ImageView
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:src="@drawable/ic_map_arrow"/>
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_bus"/>
+
+                <TextView
+                    android:id="@+id/tv_route_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textSize="14sp"
+                    android:textColor="@color/C_B2"
+                    android:layout_marginStart="2dp"
+                    tools:text="1小时10分"/>
+
+                <ImageView
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:src="@drawable/ic_map_arrow"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+
+    </com.zhaopin.common.widget.RCConstraintLayout>
 
 </com.zhaopin.common.widget.RCConstraintLayout>
