--- a/app/src/main/res/layout/layout_ai_recommend_guide.xml
+++ b/app/src/main/res/layout/layout_ai_recommend_guide.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="#7F000000">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.example.kotlindemo.widget.ZLLottieAnimationView
+        android:layout_width="240dp"
+        android:layout_height="240dp"
+        app:lottie_fileName="ai_recommend_guide.json"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        style="@style/style_text_bold_16"
+        android:textColor="@color/C_W1"
+        android:text="@string/slide_find_job"/>
+
+</LinearLayout>
