--- a/app/src/main/res/layout/layout_ai_recommend_hr.xml
+++ b/app/src/main/res/layout/layout_ai_recommend_hr.xml
@@ -1,6 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <com.zhaopin.common.widget.ZLCircleImageView
+        android:id="@+id/iv_avatar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:src="@drawable/c_common_icon_hr_new_default"/>
+
+    <ImageView
+        android:id="@+id/iv_online"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="@id/iv_avatar"
+        app:layout_constraintTop_toTopOf="@id/iv_avatar"
+        android:src="@drawable/ic_hr_online"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toEndOf="@id/iv_avatar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_avatar"
+        app:layout_constraintBottom_toBottomOf="@id/iv_online">
+
+        <LinearLayout
+            android:id="@+id/ll_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                style="@style/style_text_bold_16"
+                android:textColor="@color/C_B1"
+                android:maxLines="1"
+                android:ellipsize="end"
+                tools:text="王维嘉" />
+
+            <TextView
+                android:id="@+id/tv_hr_job"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/style_text_normal_14"
+                android:textColor="@color/C_B2"
+                tools:text="招聘主管"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_hr_active"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="10dp"
+            android:paddingHorizontal="3dp"
+            android:gravity="center_vertical"
+            tools:text="3分钟前活跃"
+            android:textSize="12sp"
+            android:textColor="#00BF9F"
+            android:visibility="visible"/>
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_greet"
+        android:layout_width="136dp"
+        android:layout_height="44dp"
+        android:gravity="center"
+        android:background="@drawable/bg_ai_recommend_greet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_avatar"
+        app:layout_constraintBottom_toBottomOf="@id/iv_avatar">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_ai_hi"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:textColor="@color/C_W1"
+            style="@style/style_text_bold_16"
+            android:text="@string/ai_recommend_greet"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
