--- a/app/src/main/res/layout/layout_resume_filed_info.xml
+++ b/app/src/main/res/layout/layout_resume_filed_info.xml
@@ -9,20 +9,20 @@
         android:id="@+id/tv_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
         android:includeFontPadding="false"
         android:textSize="12sp"
-        android:textColor="#555C70"
+        android:textColor="@color/C_B2"
         android:maxLines="1"
         android:ellipsize="end"
         tools:text="5-10万"/>
 
     <View
         android:id="@+id/v_divide"
-        android:layout_width="0.5dp"
+        android:layout_width="1dp"
         android:layout_height="8dp"
-        android:layout_marginStart="6dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginTop="1dp"
-        android:background="#C5CAD9" />
+        android:background="#EEEEEE" />
 
 </LinearLayout>
