--- a/app/src/main/res/layout/resume_recommend_skill_tag.xml
+++ b/app/src/main/res/layout/resume_recommend_skill_tag.xml
@@ -2,8 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingVertical="4dp"
+    android:layout_height="24dp"
     android:paddingHorizontal="8dp"
     android:singleLine="true"
     android:gravity="center_vertical"
