--- a/app/src/main/res/xml/motion_delivery_app_bar_2.xml
+++ b/app/src/main/res/xml/motion_delivery_app_bar_2.xml
@@ -55,8 +55,9 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginTop="22dp"
-            android:layout_marginStart="108dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="7dp"
+            app:layout_constraintEnd_toStartOf="@id/tv_title"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
         </Constraint>
@@ -65,8 +66,9 @@
             android:id="@id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            app:layout_constraintStart_toEndOf="@id/iv_icon"
+            android:layout_marginStart="22dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/iv_icon"
             app:layout_constraintBottom_toBottomOf="@id/iv_icon"/>
 
