--- a/app/src/main/res/layout/activity_appbar.xml
+++ b/app/src/main/res/layout/activity_appbar.xml
@@ -6,19 +6,27 @@
     android:paddingTop="30dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.example.kotlindemo.task.appbar.CampusAppBar
-        android:id="@+id/appbar"
+<!--    <com.example.kotlindemo.task.appbar.CampusAppBar-->
+<!--        android:id="@+id/appbar"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"/>-->
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:text="哈哈哈"/>-->
+
+    <com.example.kotlindemo.task.appbar2.CampusAppBar2
+        android:id="@+id/appbar2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="哈哈哈"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
