--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,5 +45,8 @@
         <item name="cornerSizeTopRight">16dp</item>
     </style>
 
+    <style name="ZlRegularFontStyle" parent="@android:style/TextAppearance.Small">
+        <item name="android:fontFamily">@font/noto_sans_bold_italic</item>
+    </style>
 
 </resources>
